# vkorobka

./: .gitattributes  .gitignore  README.md
.common/: CMakeLists.txt
esp32s3/: CMakeLists.txt  sdkconfig
esp32s3/main/: CMakeLists.txt  app_config.cpp  app_config.hpp  command_handler.cpp  command_handler.hpp  console_input.cpp  console_input.hpp  display_pins.hpp  dyn_pins.hpp  dyn_playback.cpp  dyn_playback.hpp  i80_lcd_bus.cpp  i80_lcd_bus.hpp  ili9486_display.cpp  ili9486_display.hpp  main.cpp  main_esp32s3.cpp  message_bridge.cpp  message_bridge.hpp  message_dispatcher.cpp  message_dispatcher.hpp  mic_pins.hpp  mic_stream.cpp  mic_stream.hpp  parallel_bus.hpp  stream_handler.cpp  stream_handler.hpp  tcp.cpp  tcp.hpp  texting.cpp  texting.hpp  uart_bridge.cpp  uart_bridge.hpp  wifi.cpp  wifi.hpp
pyapp/: README.md  audio_streaming_profiles.md  audio_stress_smoke.py  capture.flac  capture_samples.tsv  convert.py  font_utils.py  gui_app.py  image_utils.py  main.py  requirements.txt  show_bg.py  speaker_cli.py  texting.py  texting_cli.py  vkorobka_client.py  voice_cli.py
stm32f4/: main.c  main.cpp  main_stm32f401.cpp  message_queue.cpp  message_queue.hpp  uart_handler.cpp  uart_handler.hpp  vkorobka.uvprojx
stm32f4_cubemx_example/: .mxproject  DEBUG_BREAKPOINTS.md  stm32f4_cubemx_example.ioc
win-x64/: cvar.cpp  cvar.hpp  image_processor.cpp  image_processor.hpp  main.cpp  message_router.cpp  message_router.hpp  sys.hpp  tcp.cpp  tcp.hpp  udp_api.cpp  udp_api.hpp  vkorobka.slnx  vkorobka.vcxproj  vkorobka.vcxproj.filters  wifi.cpp  wifi.hpp
(+44 files in other folders)
