idf_component_register(
    SRCS
        "main.cpp"
        "ili9486_display.cpp"
        "i80_lcd_bus.cpp"
        "wifi.cpp"
        "tcp.cpp"
        "message_bridge.cpp"
        "uart_bridge.cpp"
    INCLUDE_DIRS
        "."
    PRIV_REQUIRES
        .common
    REQUIRES
        esp_wifi
        nvs_flash
        lwip
        freertos
        esp_driver_gpio
        esp_lcd
        driver
)
